[package]
name = "theinfinitytimes-api-rs"
version = "0.1.0"
authors = ["theinfinitytimes Group"]
edition = "2018"
description = "This is the api server for the infinitytimes frontend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.8.0"
bson = "1.0.0"
chrono = "0.4.11"
juniper = "0.14.2"
juniper_warp = "0.5.2"
mongodb = "1.0.0"
tokio = "0.2.21"
url = "2.1.1"
warp = "0.2.3"
wither = "0.9.0-alpha.0"

[build-dependencies]
bench = "^1.0.0"
serde_json = "1.0.53"